# panda-microfluidics

./: README.md  franka_run.py  match_markers_gui.py
Previous iterations/: Franka_test_v0.py
misc_files/: Data_for_Poses_n_stuff.txt  camera_calibration.txt  match_markers_gui.py  predefined_poses_configs.txt
misc_files/04_logs/: joints.csv
misc_src/: Franka_test.py  blocking_server.py  franka_run.py  gripper_example.py  match_markers_gui.py  teleoperation_gripper.py  threading_server.py  webcam_client.py
scratchpad/: .gitignore
scratchpad/franka_ros2_csc379/: .clang-format  CMakeLists.txt  README.md  package.xml  run_clang_format.sh
scratchpad/franka_ros2_csc379/include/franka_ros2_csc379/: franka_impedance_control.hpp  franka_impedance_control_ros2.hpp  franka_state_publisher_ros2.hpp
scratchpad/franka_ros2_csc379/scripts/: ._teleoperation.py  franka_state_subscriber.py  joint_control.py  teleoperation.py
scratchpad/franka_ros2_csc379/src/: franka_impedance_control.cpp  franka_impedance_control_ros2.cpp  franka_state_publisher_ros2.cpp  run_franka_impedance_control.cpp  run_franka_impedance_control_ros2.cpp  talker.cpp
scratchpad/libfranka/: ._.git  ._CMakeLists.txt  ._LICENSE
scratchpad/libfranka/common/: ._CMakeLists.txt
scratchpad/libfranka/examples/: ._CMakeLists.txt
scratchpad/libfranka/test/: ._CMakeLists.txt
simulation_notebooks/: chip_detect.ipynb  pybulletsim_with_cam.ipynb
